feat: Controller Movies
