# openapi.json
@@ -193,6 +193,171 @@
         "title": "User Response Schema",
         "description": "Schema to use in the response field"
       },
+      "MovieInput": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "minimum": -9007199254740991,
+            "maximum": 9007199254740991
+          },
+          "title": {
+            "type": "string",
+            "minLength": 1
+          },
+          "description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "year": {
+            "type": "integer",
+            "minimum": 1895,
+            "maximum": 9999
+          },
+          "duration": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 26000
+          },
+          "age": {
+            "type": "string"
+          },
+          "poster": {
+            "type": "string",
+            "format": "uri"
+          },
+          "link": {
+            "type": "string",
+            "format": "uri"
+          }
+        },
+        "required": [
+          "id",
+          "title",
+          "description",
+          "genres",
+          "year",
+          "duration",
+          "age",
+          "poster",
+          "link"
+        ],
+        "title": "Movie Response Schema",
+        "description": "Schema to use in the response field"
+      },
+      "MovieRequestInput": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "minLength": 1
+          },
+          "description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "year": {
+            "type": "integer",
+            "minimum": 1895,
+            "maximum": 9999
+          },
+          "duration": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 26000
+          },
+          "age": {
+            "type": "string"
+          },
+          "poster": {
+            "type": "string",
+            "format": "uri"
+          },
+          "link": {
+            "type": "string",
+            "format": "uri"
+          }
+        },
+        "required": [
+          "title",
+          "description",
+          "genres",
+          "year",
+          "duration",
+          "age",
+          "poster",
+          "link"
+        ],
+        "title": "Movie Request Schema",
+        "description": "Schema to pass a Movie in the \"body\" field"
+      },
+      "MovieResponseInput": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "minimum": -9007199254740991,
+            "maximum": 9007199254740991
+          },
+          "title": {
+            "type": "string",
+            "minLength": 1
+          },
+          "description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "year": {
+            "type": "integer",
+            "minimum": 1895,
+            "maximum": 9999
+          },
+          "duration": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 26000
+          },
+          "age": {
+            "type": "string"
+          },
+          "poster": {
+            "type": "string",
+            "format": "uri"
+          },
+          "link": {
+            "type": "string",
+            "format": "uri"
+          }
+        },
+        "required": [
+          "id",
+          "title",
+          "description",
+          "genres",
+          "year",
+          "duration",
+          "age",
+          "poster",
+          "link"
+        ],
+        "title": "Movie Response Schema",
+        "description": "Schema to use in the response field"
+      },
       "Response": {
         "type": "object",
         "properties": {
@@ -386,6 +551,174 @@
         "additionalProperties": false,
         "title": "User Response Schema",
         "description": "Schema to use in the response field"
+      },
+      "Movie": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "minimum": -9007199254740991,
+            "maximum": 9007199254740991
+          },
+          "title": {
+            "type": "string",
+            "minLength": 1
+          },
+          "description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "year": {
+            "type": "integer",
+            "minimum": 1895,
+            "maximum": 9999
+          },
+          "duration": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 26000
+          },
+          "age": {
+            "type": "string"
+          },
+          "poster": {
+            "type": "string",
+            "format": "uri"
+          },
+          "link": {
+            "type": "string",
+            "format": "uri"
+          }
+        },
+        "required": [
+          "id",
+          "title",
+          "description",
+          "genres",
+          "year",
+          "duration",
+          "age",
+          "poster",
+          "link"
+        ],
+        "additionalProperties": false,
+        "title": "Movie Response Schema",
+        "description": "Schema to use in the response field"
+      },
+      "MovieRequest": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "minLength": 1
+          },
+          "description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "year": {
+            "type": "integer",
+            "minimum": 1895,
+            "maximum": 9999
+          },
+          "duration": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 26000
+          },
+          "age": {
+            "type": "string"
+          },
+          "poster": {
+            "type": "string",
+            "format": "uri"
+          },
+          "link": {
+            "type": "string",
+            "format": "uri"
+          }
+        },
+        "required": [
+          "title",
+          "description",
+          "genres",
+          "year",
+          "duration",
+          "age",
+          "poster",
+          "link"
+        ],
+        "additionalProperties": false,
+        "title": "Movie Request Schema",
+        "description": "Schema to pass a Movie in the \"body\" field"
+      },
+      "MovieResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "minimum": -9007199254740991,
+            "maximum": 9007199254740991
+          },
+          "title": {
+            "type": "string",
+            "minLength": 1
+          },
+          "description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "year": {
+            "type": "integer",
+            "minimum": 1895,
+            "maximum": 9999
+          },
+          "duration": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 26000
+          },
+          "age": {
+            "type": "string"
+          },
+          "poster": {
+            "type": "string",
+            "format": "uri"
+          },
+          "link": {
+            "type": "string",
+            "format": "uri"
+          }
+        },
+        "required": [
+          "id",
+          "title",
+          "description",
+          "genres",
+          "year",
+          "duration",
+          "age",
+          "poster",
+          "link"
+        ],
+        "additionalProperties": false,
+        "title": "Movie Response Schema",
+        "description": "Schema to use in the response field"
       }
     }
   },
@@ -529,6 +862,49 @@
           }
         }
       }
+    },
+    "/addMovie": {
+      "post": {
+        "tags": [
+          "movies"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MovieRequestInput"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "minimum": 200,
+                      "maximum": 505
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "statusCode",
+                    "message"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "servers": [
@@ -541,6 +917,10 @@
     {
       "name": "auth",
       "description": "Authentication related end-points"
+    },
+    {
+      "name": "movies",
+      "description": "Movies related end-points"
     }
   ],
   "externalDocs": {
